# gratis

./: .Rbuildignore  .gitignore  CRAN-RELEASE  DESCRIPTION  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  cran-comments.md  my-vignette.Rmd
.github/workflows/: R-CMD-check.yaml  python.yaml
R/: arima_model.R  ets_model.R  fitness.R  fitness_ts.R  ga_ts  ga_ts.R  generate.R  generate_ts.R  generate_ts_with_target.R  generate_ts_with_target_ts.R  genope.R  gratis-package.R  gratis.R  lnorm2.R  mar_model.R  nsdiffs.R  picoef.R  rmixmorm.R  runGAgeneration.R  run_gratis_app.R  run_tsgeneration_app.R  simulate.R  simulate.mixture.data.R  simulate_target.R  simulate_ts.R  tsgeneration.R  utilities.R
inst/: CITATION
man/: app.Rd  arima_model.Rd  arinf.Rd  ets_model.Rd  fitness.Rd  fitness_ts.Rd  ga_ts.Rd  generate.mar.Rd  generate_msts.Rd  generate_ts.Rd  generate_ts_with_target.Rd  gratis-package.Rd  gratis.Rd  mar_model.Rd  myGA.Rd  nsdiffs1.Rd  pi_coefficients.Rd  reexports.Rd  rlnorm2.Rd  rmixnorm.Rd  rmixnorm.ts.Rd  rmixnorm_ts.Rd  runGAgeneration.Rd  run_tsgeneration_app.Rd  simulate.mar.Rd  simulate_mixture_data.Rd  simulate_msts.Rd  simulate_target.Rd  tsgeneration.Rd
python/: .gitignore  README.md  pyproject.toml  requirements.txt
python/gratis/: __init__.py  _random.py  _version.py  arima.py  ets.py  generate.py  mar.py  mixture.py  plotting.py  target.py
python/tests/: test_parity.py  test_plotting.py  test_structure.py
tests/: testthat.R
tests/testthat/: test-mar-model.R  (+2 more)
vignettes/: .gitignore  QuickStart.Rmd  my-vignette.Rmd
(+7 files in other folders)
