[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gratis"
version = "0.0.0"
description = "Python implementation of gratis time-series generation algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "gratis contributors" }
]
dependencies = [
  "numpy>=1.23"
]

[project.optional-dependencies]
dev = [
  "pytest>=7"
]

[tool.setuptools]
packages = ["gratis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
